--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -200,6 +200,8 @@ ja:
       previous: '‹ 前'
       next: '次 ›'
       truncate: '…'
+    devise:
+      sign_out: 'サインアウト'
   controllers:
     common:
       notice_create: "%{name}が作成されました。"
