ユーザー認証の修正 - 認証画面の日本語化 - ログイン時のリダイレクト先を`/books`に設定 - ログアウト時のリダイレクト先を`accounts/sign_in`に設定

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -202,6 +202,15 @@ ja:
       truncate: '…'
     devise:
       sign_out: 'サインアウト'
+      sign_up: 'サインアップ'
+      forget_pw: 'パスワードをお忘れですか？'
+      log_in: 'ログイン'
+      e-mail: 'E-mail'
+      password: 'パスワード'
+      min_pw_size: '文字以上'
+      pw_confirmation: 'パスワード確認'
+      remember_me: 'ログイン状態を保持する'
+      send_e-mail: '送信'
   controllers:
     common:
       notice_create: "%{name}が作成されました。"
