--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -214,7 +214,12 @@ ja:
       change_pw: 'パスワードを変更'
       new_pw: '新しいパスワード'
       change: '変更'
-      edit_account: 'アカウント情報編集'
+      edit_account: 'アカウント情報の編集'
+      current_pw: '現在のパスワード'
+      update: '更新'
+      back: '戻る'
+      cancel_account: 'アカウントの削除'
+      leave_blank: '変更しない場合は空白のままにしてください'
   controllers:
     common:
       notice_create: "%{name}が作成されました。"
