--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -20,6 +20,7 @@ ja:
         self_introduction: 自己紹介文
         avatar: ユーザ画像
       book_comment:
+        content: 内容
       report:
         title: タイトル
         content: 内容
